# autoserde

./: .pylintrc  README.md  pyproject.toml
src/autoserde/: __init__.py  autoserde.py  errors.py
src/autoserde/formats/: __init__.py  base.py  bson.py  json.py  msgpack.py  yaml.py
tests/: conftest.py  test_autoserde.py  test_formats.py
